--- a/package.json
+++ b/package.json
@@ -4,5 +4,9 @@
     "description": "daily leetcode practice",
     "devDependencies": {
         "typescript": "^4.1.3"
+    },
+    "dependencies": {
+        "@types/lodash": "^4.14.168",
+        "lodash": "^4.17.20"
     }
 }
